<resources>
    <string name="app_name">ProyectoSQLite</string>
    <string name="logo1">logo</string>
    <string name="google">Google</string>
    <string name="emailLogin">Email</string>
    <string name="signup">SignUp?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="loginLogin">Login</string>
    <string name="facebook">Facebook</string>
    <string name="don_t_have_an_account">Don´t Have an Account</string>
    <string name="passwordLogin">Password</string>
    <string name="loginLogo">Login</string>
    <string name="registerLogo">Register</string>
    <string name="passwordReg">Password</string>
    <string name="usernameReg">Username</string>
    <string name="nombrereg">Name</string>
    <string name="apellidos">Last name</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="registerbtn">Register</string>
    <string name="editar_cuenta">EDIT ACCOUNT</string>
    <string name="edi_actualizar">Actualizar</string>
    <string name="edi_btncancelar">Cancel</string>
    <string name="usuarios_registrados">REGISTERED USERS</string>
    <string name="btnEditar">Edit</string>
    <string name="btnBorrar">Delete</string>
    <string name="btnMostrar">Show</string>
    <string name="btnSalir">Back</string>
    <string name="nombreUsuario">Hello! User</string>
    <string name="usuarioLogin">Username</string>
    <string name="ediPassword">Password</string>
    <string name="ediNombre">Name</string>
    <string name="ediApellido">Last Name</string>

</resources>